frame/support/test/tests/construct_runtime_ui/default_module_invalid_arg.stderr
error: Only the following modules are allowed: `Module`, `Call`, `Storage`, `Event`, `Config`, `Origin`, `Inherent`, `ValidateUnsigned`
  --> $DIR/default_module_invalid_arg.rs:10:32
   |
10 |         Balance: balances::{default, Error},
   |                                      ^^^^^
